--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Roronoa Zoro</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="resources\css\style.css">
+        <link rel="stylesheet" href="resources\css\styles.css">
         <link rel="icon" href="zoro.ico">
         
         
